# Rusty-Bitcoin-Explorer

./: .gitattributes  .gitignore  Cargo.toml  README.md  gen_doc.sh  pyproject.toml
.github/workflows/: publish.yml  release.yml  rust-clippy.yml  rust.yml
bitcoin_explorer/: __init__.py
bitcoinquery/: __init__.py
docs/: bitcoin_explorer.html  bitcoinquery.html  index.html  search.json
docs/bitcoin_explorer/: bitcoin_explorer.html
docs/bitcoinquery/: bitcoinquery.html
docs/html/: bitcoinquery.html  search.json
docs/html/bitcoinquery/: bitcoinquery.html
example/: tests.ipynb
resources/tests/Bitcoin/blocks/index/: 000030.ldb  000031.ldb  000032.ldb  000033.ldb  000034.ldb  000035.ldb  000036.ldb  000069.ldb  000070.ldb  000071.ldb  000072.ldb  000073.ldb  000074.ldb  000075.ldb  000076.ldb  000077.ldb  000078.ldb  000079.ldb  000080.ldb  000083.ldb  000084.ldb  000085.ldb  000088.ldb  000089.ldb  000092.ldb  000093.ldb  000094.ldb  000097.ldb  000098.ldb  000101.ldb  000102.ldb  000105.ldb  000106.ldb  000107.ldb  000110.ldb  000111.ldb  000114.ldb  000115.ldb  000116.ldb  000119.ldb  (+13 more)
resources/tests/Bitcoin/indexes/txindex/: 000016.ldb  000017.ldb  000018.ldb  000019.ldb  000020.ldb  000021.ldb  000022.ldb  000023.ldb  000024.ldb  000025.ldb  000026.ldb  LOG  LOG.old  MANIFEST-000215
src/: api.rs  iter.rs  lib.rs  par_iter.rs
src/api/: connected.rs  mod.rs
src/bitcoinparser/: blk_file.rs  blk_store.rs  block_index.rs  errors.rs  mod.rs  parsed_proto.rs  reader.rs  script.rs  simple_proto.rs  tx_index.rs
src/bitcoinparser/proto/: connected_proto.rs  full_proto.rs  mod.rs  simple_proto.rs
src/iter/: fetch_async.rs  fetch_connected_async.rs  iter.rs  iter_block.rs  iter_connected.rs  mod.rs  par_iter.rs  util.rs
src/parser/: blk_file.rs  block_index.rs  errors.rs  mod.rs  reader.rs  script.rs  tx_index.rs
src/parser/proto/: connected_proto.rs  full_proto.rs  mod.rs  simple_proto.rs
tests/: test_api.rs
