[package]
name = "bitcoinquery"
version = "0.1.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-leveldb = "^0.3"
byteorder = "^1.4"
bitcoin_hashes = "0.10.0"
pythonize = "0.14.0"
serde = "1.0.130"
pyo3-log = "0.4.0"
rayon = "1.5.1"
serde_json = "1.0.68"
log = "^0.4"

[lib]
name = "bitcoinquery"
crate-type = ["cdylib"]

[dependencies.bitcoin]
version = "^0.27"
features = ["use-serde"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
