[package]
name = "bitcoin-explorer"
version = "1.2.1-beta-1"
edition = "2018"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["blockchain", "bitcoin", "explorer", "parser", "concurrency"]
description = "High Performance Blockchain Deserializer"
homepage = "https://github.com/Congyuwang/Rusty-Bitcoin-Explorer"
repository = "https://github.com/Congyuwang/Rusty-Bitcoin-Explorer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
on-disk-utxo = ["rocksdb", "tempdir"]

[dependencies]
byteorder = "^1.4"
bitcoin_hashes = "0.10.0"
serde = "1.0.130"
rayon = "1.5.1"
log = "^0.4"
leveldb = "0.8.6"
num_cpus = "1.13.0"
db-key = "0.0.5"
ahash = "0.7.4"
hash_hasher = "2.0.3"
rocksdb = { version = "0.17.0", optional = true }
tempdir = { version = "0.3.7", optional = true }

[lib]
name = "bitcoin_explorer"
crate-type = ["lib"]
doctest = false

[dependencies.bitcoin]
version = "^0.27"
features = ["use-serde"]
