[project]
name = "bitcoin-explorer"
version = "0.2.21"
classifiers = ["Programming Language :: Python"]
description = "High Performance Blockchain Deserializer"
long_description_content_type="text/markdown"
readme = "README.md"
homepage = 'https://github.com/Congyuwang/Rusty-Bitcoin-Explorer'
repository = 'https://github.com/Congyuwang/Rusty-Bitcoin-Explorer'
documentation = 'https://congyuwang.github.io/Rusty-Bitcoin-Explorer/bitcoin_explorer.html'

keywords = ["rust", "bitcoin", "levelDB", "blockchain", "deserialize",
    "parser", "explorer", "python", "crypto", "history", "transaction"]

[package.metadata.maturin]
python-source = "bitcoin_explorer"

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"
